force-app/main/default/objects/DaScoopComposer__Recipient__c/DaScoopComposer__Recipient__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <label>Recipient ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>