force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Contact__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates the contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tracked Messages</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>