force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Lead__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>indicates the lead</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tracked Messages</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>