force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Recipient__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Recipient__c</fullName>
    <formula>IF(DaScoopComposer__Lead__c = null,
  &apos;Contact: &apos;,
  &apos;Lead: &apos;
)
&amp;
HYPERLINK(
IF(DaScoopComposer__Lead__c = null,  &apos;/&apos; &amp; DaScoopComposer__Contact__r.Id , &apos;/&apos; &amp; DaScoopComposer__Lead__r.Id),
  IF(DaScoopComposer__Lead__c = null,
    DaScoopComposer__Contact__r.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__Contact__r.LastName,
    DaScoopComposer__Lead__r.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__Lead__r.LastName
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>points to the recipient&apos;s lead or contact record.</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>