force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Times_Opened__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Times_Opened__c</fullName>
    <formula>DaScoopComposer__Tracked_Message__r.DaScoopComposer__Times_Opened__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates how many times the related tracked message was opened</inlineHelpText>
    <label>Times Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>