force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Tracked_Message__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Tracked_Message__c</fullName>
    <inlineHelpText>Indicates the tracked message associated with a contact</inlineHelpText>
    <label>Tracked Message</label>
    <referenceTo>DaScoopComposer__Tracked_Message__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>