force-app/main/default/objects/DaScoopComposer__Recipient__c/fields/DaScoopComposer__Type__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Type__c</fullName>
    <inlineHelpText>Indicates the type of recipient</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>